# orra

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  publish.yml
examples/: discord_bot.rs  github_issues.rs  kanban.rs
src/: agent.rs  auth.rs  channel.rs  channels.rs  context.rs  hook.rs  lib.rs  mcp.rs  memory.rs  message.rs  metrics.rs  namespace.rs  plugin.rs  policy.rs  project.rs  prompt.rs  provider.rs  providers.rs  routing.rs  runtime.rs  runtime_set.rs  scheduler.rs  store.rs  tool.rs  tools.rs  voice.rs
src/channels/: discord.rs  federation.rs  gateway.rs  manager.rs
src/cron/: mod.rs  service.rs  store.rs  types.rs
src/hooks/: approval.rs  logging.rs  mod.rs  working_directory.rs
src/mcp/: client.rs  tool.rs  transport.rs  types.rs
src/providers/: claude.rs  dynamic.rs  openai.rs
src/stores/: file.rs  mod.rs
src/tools/: browser.rs  claude_code.rs  cron.rs  delegation.rs  discord.rs  documents.rs  exec.rs  filesystem.rs  github.rs  image_gen.rs  memory.rs  mod.rs  web_fetch.rs  web_search.rs
