[package]
name = "agentic-rs"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Context-aware agent session management for any application"
license = "MIT"
repository = "https://github.com/jereanon/agentic"
homepage = "https://github.com/jereanon/agentic"
documentation = "https://docs.rs/agentic-rs"
readme = "README.md"
keywords = ["ai", "agent", "llm", "mcp", "tools"]
categories = ["api-bindings", "asynchronous"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json", "stream", "multipart"], optional = true }
futures = { version = "0.3", default-features = false, features = ["alloc"], optional = true }
futures-util = { version = "0.3", optional = true }
tokio-stream = { version = "0.1", optional = true }
tokio-tungstenite = { version = "0.26", features = ["native-tls"], optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
wiremock = "0.6"
reqwest = { version = "0.12", features = ["json", "stream"] }
tempfile = "3"
tokio-stream = "0.1"

[features]
default = []
claude = ["reqwest", "tokio-stream"]
openai = ["reqwest", "tokio-stream"]
discord = ["reqwest", "tokio-tungstenite", "futures-util"]
documents = []
github = ["reqwest"]
parallel-tools = ["futures"]
file-store = []
gateway = []
mcp = []
claude-code = []
web-fetch = ["reqwest"]
web-search = ["reqwest"]

[[example]]
name = "kanban"
required-features = ["claude"]

[[example]]
name = "discord_bot"
required-features = ["claude", "discord"]

[[example]]
name = "github_issues"
required-features = ["claude", "github"]
